--- a/deep-learning.html
+++ b/deep-learning.html
@@ -163,7 +163,7 @@ the center of our core mission, building state of the art technologies. You will
 <p>Oct 7, 2019 ... Apply online for the job of Deep Learning Engineer with Strong iOS Development 
 Skills at Crisalix.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://recruit.ucsc.edu/JPF00769'>Computer Science and Engineering: Assistant Professor in Deep Learning (Initial Review 1/07/20) (JPF00769) - UCSC Academic Recruit</a></h5> 
+<h5><a href='https://recruit.ucsc.edu/JPF00769'>Computer Science and Engineering: Assistant Professor in Deep Learning (Initial Review 1/07/20) (JPF00769) - UCSC Academic Recruit</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
@@ -232,7 +232,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://deeplite.breezy.hr/p/6f4188889d87-deep-learning-engineer'>Deep Learning Engineer at Deeplite Inc.</a></h5> 
+<h5><a href='https://deeplite.breezy.hr/p/6f4188889d87-deep-learning-engineer'>Deep Learning Engineer at Deeplite Inc.</a></h5> 
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
@@ -308,7 +308,7 @@ with a?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-23</p>
 <hr/>
-<h5><a href='https://headhonchos.quezx.com/jobs/Manager-Analytics-Deep-Machine-Learning-Iit-nit-iim-isb-xlri-fms-Business-Analytics-Consumer-Durables-Semi-Durables-Gurgaon-1263033'>Hiring For Manager - Analytics - Deep Machine Learning - Iit/nit/iim/isb/xlri/fms in Gurgaon for Exp: 5-10 yrs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://headhonchos.quezx.com/jobs/Manager-Analytics-Deep-Machine-Learning-Iit-nit-iim-isb-xlri-fms-Business-Analytics-Consumer-Durables-Semi-Durables-Gurgaon-1263033'>Hiring For Manager - Analytics - Deep Machine Learning - Iit/nit/iim/isb/xlri/fms in Gurgaon for Exp: 5-10 yrs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-23</p>
 <hr/>
@@ -334,7 +334,7 @@ design, build, and ship TensorRT: NVIDIA's high-performance deep learning?...</p
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-09-18</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/samsungssi/job/oJY4afwF'>Samsung Semiconductor, Inc. Careers - Deep Learning Theory Researcher/ Scientist Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oJY4afwF'>Samsung Semiconductor, Inc. Careers - Deep Learning Theory Researcher/ Scientist Intern</a></h5> 
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-09-18</p>
 <hr/>
@@ -431,12 +431,12 @@ software engineer while also allowing you to work with state-of-the-art?...</p>
 <p><span class="badge badge-light">Barcelona Barcelona  Barcelona  Tallinn, Harju County, Estonia</span></p>
 <p>Posted on: 2019-09-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thomsonreuters.wd5.myworkdayjobs.com/External_Career_Site/job/CHE-Zug-LandisGyr-Strasse-3/Senior-Data-Scientist---Deep-Learning_JREQ128968?source=Applicant_Source_Thomson_Reuters_Career_Center'>Senior Data Scientist - Deep Learning</a></h5> 
+<h5><a href='https://thomsonreuters.wd5.myworkdayjobs.com/External_Career_Site/job/CHE-Zug-LandisGyr-Strasse-3/Senior-Data-Scientist---Deep-Learning_JREQ128968?source=Applicant_Source_Thomson_Reuters_Career_Center'>Senior Data Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... We are currently looking for a senior data scientist with a passion for deep 
 learning to join the team at Thomson Reuters Labs in Zug. What do we do?</p>
 <hr/>
-<h5><a href='https://incubit.breezy.hr/p/6eb8a838aede-deep-learning-engineer'>Deep Learning Engineer at Incubit Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incubit.breezy.hr/p/6eb8a838aede-deep-learning-engineer'>Deep Learning Engineer at Incubit Inc.</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-28</p>
 <hr/>
@@ -508,7 +508,7 @@ QA?...</p>
 vision, speech processing and affective computing. We are interested in hiring a
 ?...</p>
 <hr/>
-<h5><a href='https://crisalix.workable.com/j/A785BD924B'>Crisalix - Jobs: Senior iOS App Developer + Deep Learning Experience - relocation to Barcelona - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/A785BD924B'>Crisalix - Jobs: Senior iOS App Developer + Deep Learning Experience - relocation to Barcelona - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-13</p>
 <hr/>
