--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -73,6 +73,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://intellipro.applytojob.com/apply/2i5aih0fmz/Financial-Business-System-Analyst'>Financial Business System Analyst - IntelliPro Group Inc. - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/AccoladeInc/743999698433019-business-intelligence-developer-i-junior-level-'>Accolade, Inc. Business Intelligence Developer I (Junior level) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Plymouth Meeting, PA, USA</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -101,7 +105,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.bsh-ag.de/job/consultant-business-intelligencecontrolling-mw-standort-bayreuth/'>Consultant Business Intelligence/Controlling (m/w) Standort Bayreuth</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.bsh-ag.de/job/consultant-business-intelligencecontrolling-mw-standort-bayreuth/'>Consultant Business Intelligence/Controlling (m/w) Standort Bayreuth</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -161,7 +165,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/canadian-solar/job/o4Qqbfwf'>Canadian Solar Careers - Business Intelligence Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/canadian-solar/job/o4Qqbfwf'>Canadian Solar Careers - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -326,7 +330,7 @@ using?...</p>
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Outsourced1/743999698009318-business-intelligence-consultant-j000605-'>outsourced Business Intelligence Consultant (J000605) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Outsourced1/743999698009318-business-intelligence-consultant-j000605-'>outsourced Business Intelligence Consultant (J000605) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philippines  Philippines</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -350,7 +354,7 @@ using?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://paltron1.join.com/jobs/454913-business-intelligence-specialist-m-w-d'>Job @ PALTRON (Lingen): Business Intelligence Spec... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://paltron1.join.com/jobs/454913-business-intelligence-specialist-m-w-d'>Job @ PALTRON (Lingen): Business Intelligence Spec... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -367,7 +371,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=oTRjbfwY&__jvst=Employee&__jvsd=smqK2hwk&__jvsc=Twitter&bid=nftBhMwR'>Ingram Micro Careers - Business Intelligence Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=oTRjbfwY&__jvst=Employee&__jvsd=smqK2hwk&__jvsc=Twitter&bid=nftBhMwR'>Ingram Micro Careers - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">United States Irvine, California</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
@@ -403,7 +407,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697842870-junior-business-intelligence-analyst'>Bosch Group Junior Business Intelligence Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697842870-junior-business-intelligence-analyst'>Bosch Group Junior Business Intelligence Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -435,7 +439,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bill/5348d0e5-f486-46bd-be0b-a89d6a21597e'>Bill.com - Business Intelligence Analyst - Contractor</a></h5> 
+<h5><a href='https://jobs.lever.co/bill/5348d0e5-f486-46bd-be0b-a89d6a21597e'>Bill.com - Business Intelligence Analyst - Contractor</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -448,7 +452,7 @@ Pittsburgh offices. Experience in R and Python is preferred.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999697651138-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999697651138-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -479,10 +483,6 @@ Pittsburgh offices. Experience in R and Python is preferred.</p>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q4w9Vfwo&k=Job&j=ok9Kafw7&__jvst=Employee+Referral&__jvsd=sfvEdgwm&__jvsc=Twitter&bid=nPgOeMwo'>GroupM EMEA Careers - Business Intelligence Developer, Neo Media World</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-20</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/chegg/job/oFn4afw0'>Chegg Careers - Senior Business Intelligence Developer</a></h5> 
-<p><span class="badge badge-light">Santa Clara, California  Santa Clara, CAUnited States</span></p>
-<p>Posted on: 2019-10-20</p>
 <hr/>
 
 
